--- a/src/azure/tsconfig.json
+++ b/src/azure/tsconfig.json
@@ -7,7 +7,7 @@
         "preserveConstEnums": true,
         "target": "es6",
         "sourceMap": false,
-        "inlineSourceMap": true,
-        "declaration": false
-    }
+        "inlineSourceMap": true
+    },
+    "exclude": ["tests"]
 }
