--- a/package.json
+++ b/package.json
@@ -1,49 +1,37 @@
 {
     "name": "use-gitversion",
     "version": "1.0.0",
-    "description": "Github Action that installs and uses the GitVersion tool",
-    "main": "index.js",
-    "scripts": {
-        "build-github": "tsc -p src/github",
-        "build-azure": "tsc -p src/azure && tsc -p src/azure/tests",
-        "test-azure": "mocha src/azure/tests/test-suite.js",
-        "package-github": "ncc build src/github/GitVersion.js -o dist/github",
-        "package-azure": "ncc build src/github/GitVersion.js -o dist/azure/task && tfx extension create --root dist/azure --manifest-globs vss-extension.json --output-path dist/azure"
-    },
+    "description": "Easy Semantic Versioning (http://semver.org) for projects using Git",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/GitTools/use-gitversion.git"
+        "url": "https://github.com/GitTools/use-gitversion.git"
     },
-    "keywords": [],
+    "main": "main.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
     "author": "GitTools",
+    "contributors": [
+        "GitTools contributors"
+    ],
     "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/GitTools/use-gitversion/issues"
-    },
-    "homepage": "https://github.com/GitTools/use-gitversion#readme",
     "dependencies": {
         "@actions/core": "^1.2.0",
         "@actions/exec": "^1.0.1",
         "@actions/io": "^1.0.1",
         "@actions/tool-cache": "^1.1.2",
-        "azure-pipelines-task-lib": "2.8.0",
+        "azure-pipelines-task-lib": "2.9.3",
         "azure-pipelines-tool-lib": "0.12.0",
-        "semver": "^6.3.0",
-        "semver-compare": "^1.0.0",
+        "inversify": "^5.0.1",
         "typed-rest-client": "1.5.0",
         "uuid": "^3.3.3"
     },
     "devDependencies": {
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^12.12.7",
+        "@types/node": "12.12.11",
         "@types/q": "1.5.2",
-        "@types/semver": "^6.2.0",
-        "@types/uuid": "^3.4.6",
-        "@zeit/ncc": "^0.20.5",
-        "copy-node-modules": "^1.1.1",
-        "mocha": "^6.2.1",
-        "mocha-xunit-reporter": "^1.1.0",
-        "tfx-cli": "0.6.3",
-        "typescript": "^3.7.2"
+        "reflect-metadata": "^0.1.13",
+        "tslint": "^5.20.1",
+        "typescript": "^3.7.2",
+        "@zeit/ncc": "^0.20.5"
     }
 }
