--- a/src/github/tsconfig.json
+++ b/src/github/tsconfig.json
@@ -1,13 +1,3 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "target": "es6",
-        "sourceMap": false,
-        "inlineSourceMap": true,
-        "declaration": false
-    }
+    "extends": "../tsconfig.json"
 }
