running from root

--- a/action.yml
+++ b/action.yml
@@ -14,4 +14,4 @@ outputs:
     description: 'The time we greeted you'
 runs:
   using: node12
-  main: dist/github/index.js
+  main: dist/github/setup/index.js
