--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "main": "main.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "package-github": "ncc build src/github/main.ts -o dist/github/setup"
     },
     "author": "GitTools",
     "contributors": [
