--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "preLaunchTask": "tsc: build - src/azure/tsconfig.json",
-            "name": "Run Azure Pipeline Task",
+            "name": "Run Azure Pipeline (setup) Task",
             "program": "${workspaceFolder}/src/azure/setup.ts",
             "outFiles": ["${workspaceFolder}/**/*.js"]
         },
@@ -18,8 +18,26 @@
             "type": "node",
             "request": "launch",
             "preLaunchTask": "tsc: build - src/github/tsconfig.json",
-            "name": "Run GitHub Actions",
+            "name": "Run GitHub Actions (setup)",
             "program": "${workspaceFolder}/src/github/setup.ts",
+            "outFiles": ["${workspaceFolder}/**/*.js"]
+        },
+        {
+
+            "type": "node",
+            "request": "launch",
+            "preLaunchTask": "tsc: build - src/azure/tsconfig.json",
+            "name": "Run Azure Pipeline (execute) Task",
+            "program": "${workspaceFolder}/src/azure/execute.ts",
+            "outFiles": ["${workspaceFolder}/**/*.js"]
+        },
+        {
+
+            "type": "node",
+            "request": "launch",
+            "preLaunchTask": "tsc: build - src/github/tsconfig.json",
+            "name": "Run GitHub Actions (execute)",
+            "program": "${workspaceFolder}/src/github/execute.ts",
             "outFiles": ["${workspaceFolder}/**/*.js"]
         }
     ]
