--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     },
     "main": "main.js",
     "scripts": {
+        "package-azure": "npm run package-azure-setup && npm run package-azure-execute",
+        "package-github": "npm run package-github-setup && npm run package-github-execute",
+        "package-azure-setup": "ncc build src/azure/setup.ts -o dist/azure/setup",
+        "package-azure-execute": "ncc build src/azure/execute.ts -o dist/azure/execute",
         "package-github-setup": "ncc build src/github/setup.ts -o dist/github/setup",
         "package-github-execute": "ncc build src/github/execute.ts -o dist/github/execute"
     },
