--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,7 @@ jobs:
       with:
         versionSpec: '5.1.x'
     - name: Use GitVersion
+      id: gitversion
       uses: ./execute
+    - run: |
+        echo "FullSemVer: ${{ steps.gitversion.outputs.FullSemVer }}"
