changed action names to be unique

--- a/execute/action.yml
+++ b/execute/action.yml
@@ -1,4 +1,4 @@
-name: execute
+name: gitversion-execute
 description: GitHub Action for Easy Semantic Versioning with GitVersion. Execute GitVersion to obtain version information
 author: GitTools
 branding:
