--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@types/node": "12.12.11",
         "@types/q": "1.5.2",
         "reflect-metadata": "^0.1.13",
+        "tfx-cli": "0.6.3",
         "tslint": "^5.20.1",
         "typescript": "^3.7.2",
         "@zeit/ncc": "^0.20.5"
