--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,10 @@ jobs:
       uses: ./execute-gitversion
     - run: |
         npm install
-        $date = Get-Date -format "yyyyMMddHHmm"
+        $date = Get-Date -format "yyMMddHHmm"
         $version = "${{steps.gitversion.outputs.majorMinorPatch}}.$date"
         $override = '{\"version\": \"' + $version + '\"}'
-        npm run pack-azure -- --override $override
+        npm run publish-azure -- --token ${{ secrets.TFX_TOKEN }} --override $override
+        # npm run pack-azure -- --override $override
       shell: pwsh
-      name: Pack Azure extension
+      name: Publish Azure extension
