--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     },
     "main": "main.js",
     "scripts": {
-        "package": "npm run package-github && npm run package-azure",
-        "package-azure": "npm run package-azure-setup && npm run package-azure-execute",
-        "package-github": "npm run package-github-setup && npm run package-github-execute",
-        "package-azure-setup": "ncc build src/azure/setup.ts -o dist/azure/setup",
-        "package-azure-execute": "ncc build src/azure/execute.ts -o dist/azure/execute",
-        "package-github-setup": "ncc build src/github/setup.ts -o dist/github/setup",
-        "package-github-execute": "ncc build src/github/execute.ts -o dist/github/execute",
+        "build:mock": "webpack --config webpack.config.js --env.agent=mock",
+        "build:azure": "webpack --config webpack.config.js --env.agent=azure",
+        "build:github": "webpack --config webpack.config.js --env.agent=github",
+        "build:mock:prod": "npm run build:mock -- --env.mode=production",
+        "build:azure:prod": "npm run build:azure -- --env.mode=production",
+        "build:github:prod": "npm run build:github -- --env.mode=production",
         "publish-azure": "tfx extension publish --root ./dist/azure --no-wait-validation --auth-type pat"
     },
     "author": "GitTools",
@@ -23,23 +22,27 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "@actions/core": "^1.2.0",
-        "@actions/exec": "^1.0.1",
-        "@actions/io": "^1.0.1",
-        "@actions/tool-cache": "^1.1.2",
-        "azure-pipelines-task-lib": "2.9.3",
-        "azure-pipelines-tool-lib": "0.12.0",
+        "@actions/core": "^1.2.1",
+        "@actions/exec": "^1.0.3",
+        "@actions/io": "^1.0.2",
+        "@actions/tool-cache": "^1.3.0",
+        "azure-pipelines-task-lib": "^2.9.3",
+        "azure-pipelines-tool-lib": "^0.12.0",
         "inversify": "^5.0.1",
-        "typed-rest-client": "1.5.0",
+        "typed-rest-client": "^1.7.1",
         "uuid": "^3.3.3"
     },
     "devDependencies": {
-        "@types/node": "12.12.11",
-        "@types/q": "1.5.2",
+        "@types/node": "^13.1.7",
+        "@types/q": "^1.5.2",
+        "@types/uuid": "^3.4.6",
+        "@zeit/ncc": "^0.20.5",
         "reflect-metadata": "^0.1.13",
-        "tfx-cli": "0.7.11",
+        "tfx-cli": "^0.7.11",
+        "ts-loader": "^6.2.1",
         "tslint": "^5.20.1",
-        "typescript": "^3.7.2",
-        "@zeit/ncc": "^0.20.5"
+        "typescript": "^3.7.4",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
     }
 }
