set version 5.1.2 for now

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install GitVersion
       uses: ./setup-gitversion
       with:
-        versionSpec: '5.1.x'
+        versionSpec: '5.1.2'
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: ./execute-gitversion
