--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "build:mock:prod": "npm run build:mock -- --env.mode=production",
         "build:azure:prod": "npm run build:azure -- --env.mode=production",
         "build:github:prod": "npm run build:github -- --env.mode=production",
+        "build": "npm run build:mock && npm run build:azure && npm run build:github",
+        "build:prod": "npm run build:mock:prod && npm run build:azure:prod && npm run build:github:prod",
         "publish-azure": "tfx extension publish --root ./dist/azure --no-wait-validation --auth-type pat"
     },
     "author": "GitTools",
@@ -30,14 +32,15 @@
         "azure-pipelines-tool-lib": "^0.12.0",
         "inversify": "^5.0.1",
         "typed-rest-client": "^1.7.1",
-        "uuid": "^3.3.3"
+        "uuid": "^3.4.0"
     },
     "devDependencies": {
-        "@types/node": "^13.1.7",
+        "@types/node": "^13.1.8",
         "@types/q": "^1.5.2",
         "@types/uuid": "^3.4.6",
         "json-update": "^5.3.0",
         "reflect-metadata": "^0.1.13",
+        "replace-in-file-webpack-plugin": "^1.0.6",
         "tfx-cli": "^0.7.11",
         "ts-loader": "^6.2.1",
         "tslint": "^5.20.1",
