--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,8 @@ jobs:
         git fetch --prune --unshallow
     - run: |
         npm install
-        npm run build:github:prod 
-        npm run build:azure:prod
+        npm run build:github 
+        npm run build:azure
       name: Build code
     - name: Install GitVersion
       uses: ./setup-gitversion
