--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,12 +21,12 @@ jobs:
         npm run build:azure
       name: Build code
     - name: Install GitVersion
-      uses: ./setup-gitversion
+      uses: ./gitversion/setup
       with:
         versionSpec: '5.1.2'
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
-      uses: ./execute-gitversion
+      uses: ./gitversion/execute
     - run: |
         $date = Get-Date -format "yyMMddHHmm"
         $version = "${{steps.gitversion.outputs.majorMinorPatch}}.$date"
