--- a/gitversion/setup/action.yml
+++ b/gitversion/setup/action.yml
@@ -6,7 +6,7 @@ branding:
   icon: git-pull-request
 runs:
   using: node12
-  main: ../dist/github/setup-gitversion/bundle.js
+  main: ../../dist/github/setup-gitversion/bundle.js
 inputs:
   versionSpec:
     description: Required version in the form of 5.x or exact version like 5.0.0
